--- a/css/style.css
+++ b/css/style.css
@@ -32,14 +32,27 @@ body {
 }
 
 .container {
-    width: 1158px;
-    padding-left: 15px;
-    padding-right: 15px;
+    width: 320px;
+    padding: 0 16px;
     margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        max-width: 768px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .container {
+        max-width: 1158px;
+        padding: 0 15px;
+    }
 }
 .header-container {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .header {
@@ -53,38 +66,8 @@ body {
 }
 
 .header-menu-list {
-    display: flex;
-    gap: 40px;
-}
+    display: none;
 
-.header-menu-list :hover {
-    color: #404bbf;
-}
-
-.header-menu-list :focus {
-    color: #404bbf;
-}
-.current {
-    position: relative;
-    color: #404BBF;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5; 
-    letter-spacing: 0.02em;
-    padding: 24px 0;
-    display: block;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.current::after {
-    content: "";
-    width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: -1px; 
-    height: 4px;
-    background-color: #404bbf;
-    border-radius: 2px;
 }
 
 .header-logo {
@@ -95,7 +78,7 @@ body {
     line-height: 1.17; 
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    margin-right: 76px;
+    padding: 17px 0;
 }
 
 .part-header-logo {
@@ -108,42 +91,103 @@ body {
     text-transform: uppercase;
 }
 
-.header-menu-item {
-    color: #2E2F42;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5; 
-    letter-spacing: 0.02em;
-    padding: 24px 0;
-    display: block;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .header-address {
     font-style: normal;
     margin-left: auto;
+    display: none;
+}
+.open-menu-btn {
+    padding: 0;
+    line-height: 0;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
 }
 
-.header-address-list {
-    display: flex;
-    gap: 40px;
+@media screen and (min-width: 768px) {
+    .open-menu-btn {
+        display: none;
+    }
+    .header-logo {
+        margin-right: 120px;
+    }
+    .header-menu-list {
+        display: flex;
+        gap: 40px;
+    }
+    .header-menu-item {
+        color: #2E2F42;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.5; 
+        letter-spacing: 0.02em;
+        padding: 24px 0;
+        display: block;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
+    }
+    .header-menu-list :hover {
+        color: #404bbf;
+    }
+    .header-menu-list :focus {
+        color: #404bbf;
+    }
+    .current {
+        position: relative;
+        color: #404BBF;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.5; 
+        letter-spacing: 0.02em;
+        padding: 24px 0;
+        display: block;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .current::after {
+        content: "";
+        width: 100%;
+        position: absolute;
+        left: 0;
+        bottom: -1px; 
+        height: 4px;
+        background-color: #404bbf;
+        border-radius: 2px;
+    }
+    .header-address {
+        display: block;
+    }
+    .header-address-list{
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
+    .header-address-item {
+        color: #434455;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 1.16;
+        letter-spacing: 0.02em;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .header-address :hover {
+        color: #404bbf;
+    }
+    .header-address :focus {
+        color: #404bbf;
+    }
 }
 
-.header-address-item {
-    color: #434455;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-address :hover {
-    color: #404bbf;
-}
-
-.header-address :focus {
-    color: #404bbf;
+@media screen and (min-width: 1158px) {
+    .header-logo {
+        margin-right: 76px;
+    }
+    .header-address-list {
+        flex-direction: row;
+        gap: 40px;
+    }
+    .header-address-item {
+        font-size: 16px;
+        line-height: 1.5;
+    }
 }
 
 .backdrop {
