--- a/css/style.css
+++ b/css/style.css
@@ -775,7 +775,6 @@ body {
     letter-spacing: 0.02em;
     color: #ffffff;
     font-size: 16px;
-    margin-top: 70px;
     text-align: center;
 }
 
@@ -871,14 +870,14 @@ body {
     }
 
     .footer-container {
-        width: 1158px;
-        /* max-width: 1158px;
+        /*width: 1158px;
+         max-width: 1158px;
         padding-left: 15px;
-        padding-right: 15px; */
+        padding-right: 15px;
         display: flex;
         margin: 0 auto;
         align-items: baseline;
-        flex-wrap: nowrap;
+        flex-wrap: nowrap;*/
     }
 
     .container-logo {
